--- a/css/main.css
+++ b/css/main.css
@@ -18,10 +18,28 @@ body {
 /* Eigenschappen van de hoofdinhoud */
 main {
     background-color: #FAFAFA;
-    width: 90%;
-    height: 100vh;
+    width: 85%;
+    top: 0;
+    height: 100%;
     max-width: 75%;
     margin: auto;
+    box-shadow: 0px 0px 15px 15px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0px 0px 15px 15px rgba(0,0,0,0.5);
+}
+
+section {
+    padding: 7.5% 2%;
+}
+
+nav {
+    top: 0;
+    left: 0;
+    height: 4em;
+    width: 100%;
+    position: absolute;
+    background-color: #FAFAFA;
+    box-shadow: 0px 16px 15px -5px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0px 16px 15px -5px rgba(0, 0, 0, 0.5);
 }
 
 /*****************************************************************************/
