--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 /* Imports en andere @-regels (exclusief responsieve).                       */
 /*****************************************************************************/
 
-/* Importeer verschillende lettertypen via Google Fonts */
+/* Importeer verschillende lettertypen d.m.v. Google Fonts */
 @import url('https://fonts.googleapis.com/css?family=Coda|Source+Sans+Pro');
 
 /*****************************************************************************/
