--- a/css/experiments.css
+++ b/css/experiments.css
@@ -33,7 +33,9 @@
     background-color: rgb(0,162,255);
     padding: 16px 8px;
     text-align: left;
-    display: inline-block;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
 }
 
 .bottom_box_s2 {
