--- a/css/experiments.css
+++ b/css/experiments.css
@@ -1,70 +1,75 @@
 /* Dit bestand dient als CSS voor experiment.php/.html */
 
+/* Standaardgebeuren */
 .superbox {
     text-align: center;
+}
+
+.box > p {
+    margin: 0;
+    padding: 0;
     color: #FFF;
+}
+
+.box {
+    width: 300px;
+    background-color: rgb(0, 162, 255);
+    padding: 16px 8px;
+    display: inline-block;
 }
 
 /* Onderwerp 1 */
 .left_box_s1 {
-    width: 300px;
-    background-color: rgb(0, 162, 255);
     border: 3px solid rgb(0, 81, 127);
     padding: 16px 8px;
     margin-right: 7px;
-    display: inline-block;
     text-align: left;
 }
 
 .right_box_s1 {
-    width: 300px;
-    background-color: rgb(0, 162, 255);
     border: 3px solid rgb(0, 0, 0);
     padding: 16px 8px;
-    display: inline-block;
     text-align: right;
 }
 
 /* Onderwerp 2 */
 .top_box_s2 {
-    width: 600px;
-    background-color: rgb(0,162,255);
-    padding: 16px 8px;
-    text-align: left;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    position: absolute;
+    background-color: rgb(0, 162, 255);
+    padding: 16px 0 16px 8px;
 }
 
-.bottom_box_s2 {
-    width: 600px;
-    height: 250px;
+.top_box_s2 > p {
+    margin: 0;
+    padding: 0;
+}
+
+.main_box_s2 {
     background-color: rgb(239, 95, 167);
-    padding: 16px 8px;
     text-align: left;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
+    vertical-align: center;
+    overflow-x: hidden;
+    color: #FFF;
+}
+
+.main_box_s2 > p {
+    margin-top: 50vh;
 }
 
 /* Onderwerp 3 */
 .left_box_s3 {
-    width: 300px;
-    background-color: rgb(0, 162, 255);
     border: 3px solid rgb(0, 81, 127);
-    padding: 16px 8px;
     margin-right: 3px;
-    display: inline-block;
     text-align: left;
     transform: rotate(-5deg);
     -webkit-transform: rotate(-5deg);
 }
 
 .right_box_s3 {
-    width: 300px;
-    background-color: rgb(0, 162, 255);
     border: 3px solid rgb(0, 0, 0);
-    padding: 16px 8px;
     display: inline-block;
     text-align: right;
     transform: rotate(10deg);
@@ -87,12 +92,8 @@
 }
 
 .left_box_s4 {
-    width: 300px;
-    background-color: rgb(0, 162, 255);
     border: 3px solid rgb(0, 81, 127);
-    padding: 16px 8px;
     margin-right: 3px;
-    display: inline-block;
     text-align: left;
     animation: rotate_lb 1s;
     -webkit-animation: rotate_lb 1s;
@@ -101,11 +102,7 @@
 }
 
 .right_box_s4 {
-    width: 300px;
-    background-color: rgb(0, 162, 255);
     border: 3px solid rgb(0, 0, 0);
-    padding: 16px 8px;
-    display: inline-block;
     text-align: right;
     animation: rotate_rb 1s;
     -webkit-animation: rotate_rb 1s;
