--- a/css/experiments.css
+++ b/css/experiments.css
@@ -90,12 +90,15 @@
     }
     66% {
         background-color: #0000FF;
-        transform: skew(10deg, 75deg);
+        transform: skew(10deg, 85deg);
+    }
+    95% {
+        background-color: #FF0000;
     }
     100% {
         transform: rotate(355deg);
         -webkit-transform: rotate(355deg);
-        background-color: #FF0000;
+        background-color: rgb(0, 162, 255);
     }
 }
 
@@ -110,8 +113,8 @@
     border: 3px solid rgb(0, 81, 127);
     margin-right: 4px;
     text-align: left;
-    animation: rotate_lb 1s;
-    -webkit-animation: rotate_lb 1s;
+    animation: rotate_lb 2s;
+    -webkit-animation: rotate_lb 2s;
     transform: rotate(-5deg);
     -webkit-transform: rotate(-5deg);
 }
@@ -119,8 +122,8 @@
 .right_box_s4 {
     border: 3px solid rgb(0, 0, 0);
     text-align: right;
-    animation: rotate_rb 1s;
-    -webkit-animation: rotate_rb 1s;
+    animation: rotate_rb 2s;
+    -webkit-animation: rotate_rb 2s;
     transform: rotate(10deg);
     -webkit-transform: rotate(10deg);
 }
