--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ nav {
     background-color: #FAFAFA;
     box-shadow: 0px 16px 15px -5px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: 0px 16px 15px -5px rgba(0, 0, 0, 0.5);
+    z-index: 999;
 }
 
 nav > a {
