--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,8 @@
 
 /* Standaardlettertype en achtergrondkleur */
 body {
+    top: 0;
+    bottom: 0;
     font-family: "Source Sans Pro", sans-serif;
     color: #111;
     background-color: #164225;
@@ -21,8 +23,8 @@ main {
     background-color: #FAFAFA;
     width: 85%;
     top: 0;
+    bottom: 0;
     height: 100%;
-    max-width: 75%;
     margin: auto;
     box-shadow: 0px 0px 15px 15px rgba(0,0,0,0.5);
     -webkit-box-shadow: 0px 0px 15px 15px rgba(0,0,0,0.5);
@@ -30,7 +32,7 @@ main {
 
 /* Gedeelte met 'eigenlijke' inhoud */
 section {
-    padding: 7.5% 2%;
+    padding: 2% 2% 7.5% 2%;
 }
 
 /* Navigatiebalk */
@@ -41,12 +43,12 @@ nav {
     width: 100%;
     margin: 0;
     padding: 0;
-    position: absolute;
+    position: sticky;
     overflow: hidden;
     background-color: #FAFAFA;
     box-shadow: 0px 16px 15px -5px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: 0px 16px 15px -5px rgba(0, 0, 0, 0.5);
-    z-index: 999;
+    z-index: 9999;
 }
 
 nav > a {
@@ -55,6 +57,7 @@ nav > a {
     color: #111;
     text-decoration: none;
     float: left;
+    display: block;
 }
 
 nav > a:hover {
@@ -71,6 +74,10 @@ nav > a.active {
 
 nav > a.right {
     float: right;
+}
+
+.nav_icon {
+    display: none;
 }
 
 /*****************************************************************************/
@@ -126,6 +133,7 @@ a:hover {
 .ec_table {
     width: 90%;
     margin: auto;
+    overflow: scroll;
 }
 
 .ec_table > tbody > tr.failed {
