> pagina 'Home' is nu voor grootste deel responsief

--- a/css/main.css
+++ b/css/main.css
@@ -228,3 +228,23 @@ a:hover {
 .clear {
     clear: both;
 }
+
+/*****************************************************************************/
+/* Flex-klassen                                                              */
+/*****************************************************************************/
+
+/* Algemene flex-klasse */
+.flex {
+    display: flex;
+}
+
+/* Home */
+.flex_home {
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+.flex_home > .flex_home_content {
+    flex-grow: 1;
+    padding: 5px;
+}
