--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,6 +3,25 @@
     JavaScript is 'responsive.js'.
 */
 
+/* Verbreed de witte achtergrond bij maximale grootte van 425 px */
+@media screen and (max-width: 425px) {
+    main {
+        width: 95%;
+    }
+}
+
+/* Toon de introductie op de home-pagina onder elkaar op schermen <651px (vreemde waarde, maar blijkbaar werkt het niet anders) */
+@media screen and (max-width: 651px) {
+    .flex_home {
+        flex-wrap: wrap;
+        justify-content: left;
+    }
+
+    .flex_home > .flex_home_content {
+        padding: 0;
+    }
+}
+
 /* Navigatiebalk (update 720px naargelang er meer links worden toegevoegd) */
 @media screen and (max-width: 720px) {
     /* Toon alleen de Home-knop */
