--- a/css/experiments.css
+++ b/css/experiments.css
@@ -85,21 +85,26 @@
     }
     10% {
         transform: scale(0.1);
+        -webkit-transform: scale(0.1);
     }
     33% {
         background-color: #00FF00;
         transform: rotate(165deg) skew(90deg, 305deg);
+        -webkit-transform: rotate(165deg) skew(90deg, 305deg);
     }
     66% {
         background-color: #0000FF;
         transform: skew(10deg, 85deg);
+        -webkit-transform: skew(10deg, 85deg);
     }
     80% {
         background-color: #FF0000;
         transform: scale(3) matrix(1, 3, 6, 4, 10, 5);
+        -webkit-transform: scale(3) matrix(1, 3, 6, 4, 10, 5);
     }
     90% {
         transform: scale(0.01);
+        -webkit-transform: scale(0.01);
     }
     100% {
         transform: rotate(355deg);
