> achtergrondkleur gewijzigd (test)

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
     bottom: 0;
     font-family: "Source Sans Pro", sans-serif;
     color: #111;
-    background-color: #164225;
+    background-color: pink;
     overflow-x: hidden;
 }
 
