--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,13 @@ ul {
 }
 
 /*****************************************************************************/
+/* Citaties                                                                  */
+/*****************************************************************************/
+.cite_missing {
+    color: #FF0000;
+}
+
+/*****************************************************************************/
 /* Float-klassen                                                             */
 /*****************************************************************************/
 
