--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,9 @@ a:hover {
 }
 
 /* Tekst */
-p {
+p,
+ul,
+ol {
     line-height: 1.3em;
 }
 
@@ -179,8 +181,33 @@ ul {
 /*****************************************************************************/
 /* Citaties                                                                  */
 /*****************************************************************************/
-.cite_missing {
-    color: #FF0000;
+blockquote {
+    margin: auto 0.625em;
+    padding: 5px;
+    border-left: 5px solid #BBB;
+    border-right: 5px solid #BBB;
+}
+
+blockquote > .in_blockquote {
+    margin: 0 0 1em;
+}
+
+blockquote > p:not(:last-child) {
+    margin: 0 0 1em;
+}
+
+blockquote > p:last-child {
+    margin: 0;
+}
+
+cite::before {
+    content: "—";
+    padding-right: 5px;
+}
+
+cite {
+    margin-left: 1em;
+    font-style: normal;
 }
 
 /*****************************************************************************/
