--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,7 @@ blockquote {
     margin: auto 0.625em;
     padding: 5px;
     border-left: 5px solid #BBB;
-    border-right: 5px solid #BBB;
+    background-color: #EBEBEB;
 }
 
 blockquote > .in_blockquote {
