--- a/css/main.css
+++ b/css/main.css
@@ -49,10 +49,11 @@ nav {
     background-color: #FAFAFA;
     -webkit-box-shadow: 0px 16px 15px -5px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 16px 15px -5px rgba(0, 0, 0, 0.5);
-    z-index: 9999;
+    z-index: 5001;
 }
 
-nav > a {
+nav > a,
+nav > button {
     text-align: center;
     padding: 1.5em;
     color: #111;
@@ -61,22 +62,49 @@ nav > a {
     display: block;
 }
 
-nav > a:hover {
+nav > a:hover,
+nav > button:hover {
     background-color: #69A27C;
     color: #111 !important;
     text-decoration: none;
 }
 
-nav > a.active {
+nav > a.active,
+nav > button.active {
     background-color: #297B45;
     color: #FFF !important;
 }
 
-nav > a.dropdown::after {
+/* Dropdown */
+nav > button.dropdown::after {
     content: "∨";
     padding-left: 0.625em;
 }
 
+nav > button.dropdown > div.dropdown_content {
+    display: none;
+    background-color: #FAFAFA;
+    z-index: 5002;
+}
+
+nav > button.dropdown > div.dropdown_content:hover {
+    display: relative;
+}
+
+nav > button.dropdown > div.dropdown_content > a {
+    padding: 1.5em;
+    text-decoration: none;
+}
+
+nav > button.dropdown > div.dropdown_content > a:hover {
+    background-color: #EBEBEB;
+}
+
+nav > button.dropdown > div.dropdown_content > a.active {
+    background-color: #BBB;
+}
+
+/* Hamburgericoontje voor responsiefheid */
 nav > a.right {
     float: right;
 }
