--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 /*****************************************************************************/
 
 /* Importeer verschillende lettertypen d.m.v. Google Fonts */
-@import url('https://fonts.googleapis.com/css?family=Coda|Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=Coda|Source+Sans+Pro|Source+Code+Pro');
 
 /*****************************************************************************/
 /* 'Grote' elementen als BODY, HTML e.d.                                     */
@@ -230,6 +230,17 @@ p,
 ul,
 ol {
     line-height: 1.3em;
+}
+
+/* Tekst (monospace) */
+code,
+kbd,
+samp,
+tt,
+pre {
+    font-family: "Source Code Pro", monospace;
+    line-height: 0.9em;
+    font-size: smaller;
 }
 
 /* Lijsten */
