--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,28 @@ ul {
     list-style-type: disc;
 }
 
+/* Horizontale lijst */
+ul.horizontal_list {
+    list-style: none;
+    margin-top: -1em;
+}
+
+ul.horizontal_list > li {
+    display: inline;
+    padding-left: 5px;
+}
+
+ul.horizontal_list:not(:first-child) > li:not(:first-child)::before {
+    padding-right: 5px;
+    content: "•";
+}
+
+ul.horizontal_list > li > ul {
+    margin-top: 0.25em;
+    padding-left: 0;
+    font-size: smaller;
+}
+
 /* Tabel met EC en toetsen */
 .ec_table {
     width: 90%;
@@ -379,4 +401,25 @@ cite {
 .flex_prog_icons {
     flex-wrap: nowrap;
     justify-content: center;
+}
+
+/*****************************************************************************/
+/* JavaScript-ID's en toebehoren                                             */
+/* Deze ID's worden door JavaScript gebruikt. Hier worden enkel de           */
+/* standaardwaarden gedefinieerd.                                            */
+/*****************************************************************************/
+
+/* Blog */
+/* Navigatielinks */
+a.post_nav {
+    color: #111 !important;
+    text-decoration: none;
+    cursor: default;
+    font-weight: bold;
+}
+
+a.post_nav:hover {
+    color: #111 !important;
+    text-decoration: none;
+    cursor: default;
 }
