--- a/css/main.css
+++ b/css/main.css
@@ -327,6 +327,11 @@ figcaption {
     padding: 2px;
 }
 
+/* Blog-afbeeldingen */
+.blog_img_full_width {
+    max-width: 100%;
+}
+
 /*****************************************************************************/
 /* Citaties                                                                  */
 /*****************************************************************************/
